# Yaguchi-Production-System

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_db_design.md  02_backend_bootstrap.md  03_job_crud.md  04_job_list_ui.md  05_calendar_ui.md
docs/: CODEX_PROMPT_TEMPLATES.md  DB_SCHEMA.md  PROJECT_BOOTSTRAP_CHECKLIST.md  SETUP.md  Yaguchi_VSCode_Codex_Development_Guide.docx  Yaguchi_VSCode_Codex_Development_Guide.md
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/api/: jobsApi.ts  masterApi.ts  mockJobs.ts
frontend/src/components/: FilterBar.tsx  JobAssignmentEditor.tsx  JobCreateForm.tsx  JobEditForm.tsx  JobTable.tsx  MonthlyScheduleTable.tsx  ScheduleFilterBar.tsx
frontend/src/hooks/: useCustomersData.ts  useJobFilters.ts  useJobsData.ts  useMastersData.ts  useScheduleFilters.ts  useWorkersData.ts
frontend/src/pages/: JobsListPage.tsx  MasterPage.tsx  SchedulePage.tsx
frontend/src/types/: job.ts  master.ts
src/yaguchi_production_system/: __init__.py
src/yaguchi_production_system/api/: __init__.py  dependencies.py  error_handlers.py  main.py
src/yaguchi_production_system/core/: __init__.py  database.py  exceptions.py  logging.py  settings.py
src/yaguchi_production_system/models/: __init__.py  attendance.py  base.py  customer.py  job.py  job_assignment.py  worker.py
src/yaguchi_production_system/services/: job_service.py  (+1 more)
tests/api/: test_healthcheck.py  test_jobs_crud.py  test_master_api.py
tests/core/: test_exceptions.py
(+7 files in other folders)
